syntax = "proto3";

package proto;

option go_package = "github.com/augustlh/chitchat/proto";

service ChitChatService {
  rpc Connect(ConnectRequest) returns (ConnectResponse);
  rpc Stream(stream StreamRequest) returns (stream StreamResponse);
  // How to do disconnect? Very unsure
}

message ConnectRequest {
  string username = 1;
}

message ConnectResponse {
  string token = 1;
}

message StreamRequest {
  string token = 1;
  string message = 2;
}

message StreamResponse {
  //add timestmap later

  oneof event {
    Message chat_message = 1;
    Login login = 2;
    Logout logout = 3;
  }

  message Message {
    string username = 1;
    string message = 2;
  }

  message Login {
    string username = 1;
  }

  message Logout {
    string username = 1;
  }
}
